[package]
name = "be_tween"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["gamedev", "tweening"]
description = "Helper library to support tweening - with inital support for bevy"
repository = "https://github.com/Bytekeeper/be_tween"

[dependencies]
bevy = {version = "0.16", optional = true, default-features = false, features = ["bevy_sprite", "bevy_ui", "bevy_audio", "bevy_log"]}
dyn-clone = "1.0"

[features]
default = ["bevy"]
bevy = ["dep:bevy"]
